fixing spacing on price elemment

--- a/styles.css
+++ b/styles.css
@@ -174,4 +174,7 @@ button > div{
     .details {
         padding: 1.8em;
     }
+    .price{
+        max-width: 45%;
+    }
 }
